# RAG-Q-A-APP

./: .dockerignore  .env  .gitignore  README.md  dockerfile  history.txt  main.py  pyproject.toml  requirements.txt  settings.py  vector_document.json
doc/: ErrorLog.md  apiDoc.md  chatHistory.json  errorOfOneapi.txt  evLog.md  langchain接入oneapi.md  need.md  needtemplate.md  《章鱼哥快乐偏方实验记录》.md  《蟹堡王员工规范》.md  协程、进程、线程.md  同步操作  知识库包含多个文件方案.md  项目需求规格说明书.txt
doc/PRD/: PRD-2引言  PRD-4.3助手管理.md  PRD-4.4. 会话管理.md
migrations/models/: 0_20250326194514_init.py  1_20250329161225_add_nickname_field.py
src/: pyproject.toml
src/config/: Beanie.py  Motor.py  Redis.py  Tortoise.py
src/middleware/: reqInfo.py  resTime.py
src/models/: assistant.py  chat_history.py  config.py  knowledge.py  knowledgeBase.py  session.py  user.py
src/router/: ConfigRouter.py  api  assistantRouter.py  auth.py  chat.py  chatRouter.py  config.py  file.py  knowledge.py  knowledgeRouter.py  myllm.py  session  sessionRouter.py  user.py  userRouter.py  组件
src/service/: ChatSev.py  assisitentSev.py  chatmessageHistory.py  knowledgeSev.py  sessionSev.py  userSev.py
src/utils/: DocumentChunker.py  Knowledge.py  MCP_sev.py  RAG.py  RecursiveCharacterTextSplitter.py  Rerank.py  agent_mcp.py  bm25Retriver.py  embedding.py  jwt.py  llm_modle.py  loader.py  mcp_agent_langgraph.py  mcp_agent_single.py  output_parser.py  pwdHash.py  remote_rerank.py  text_splitter.py  trimmer.py  with_msg_history.py
